# py6502

./: .coverage  .gitignore  6502-prog.asm  CHANGELOG.md  FORK_REVIEW.md  INSTALLATION.md  MACRO_IMPLEMENTATION_SUMMARY.md  README.txt  coverage.xml  pyproject.toml
py6502/: FID_TODO.md  Krakowicz_examples.py  MACROS.md  SKILLS.md  __init__.py  asm6502.py  cli_asm6502.py  cli_debugger.py  cli_dis6502.py  cli_sim6502.py  debugger.py  dis6502.py  example_macros.asm  example_macros.hex  macro6502.py  macros_examples.py  memory_map.py  py6502_common.py  scrolltest.py  sim6502.py  small_example.py  termbox_util.py  test6502.py  test_all_instructions.py  test_assemble_in_two_places.py  test_mpu6502.py  test_mpu65c02.py  test_shim.py  test_show_all_opcodes.py
py6502.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_macros.py  test_round_trip.py
